--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.0",
     "react-tooltip": "^5.28.1",
+    "sweetalert2": "^11.21.2",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
